# m323

./: BUILD.bazel  Package.swift
01/: Drei.java  Eins.java  ShoppingCart.java  ShoppingCartFunctional.java  ShoppingCartImperative.java
02/: WeDontLikeCharA.swift
03/: Aufgabe3.swift  PureOrNotPure.md
Sources/Aufgabe3/: PureOrNotPure.md  main.swift
Sources/Aufgabe4/: File.txt
Sources/Aufgabe4/01_MapUebungen/: main.swift
Sources/Aufgabe4/02_FilterUebungen/: main.swift
Sources/Aufgabe4/03_MapUndFilterUebungen/: main.swift
Sources/Aufgabe4/04_FoldLeftUebungen/: main.swift
Sources/Aufgabe4/05_FlatMapUebungen/: main.swift
Sources/Aufgabe4/06_ForComprehensionsUebungen/: main.swift
Sources/LeetCode/: LeetCode.swift  main.swift
Sources/WeDontLikeCharA/: main.swift
Sources/m323/: m323.swift
Tests/m323Tests/: m323Tests.swift
